# RTNeural_Plugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RTN_Processor.cpp  RTN_Processor.hpp
RTNeural_SC/: CMakeLists.txt  RTNeuralUGen.cpp  RTNeuralUGen.hpp
RTNeural_SC/RTNeural/: RTNeural.sc
RTNeural_SC/RTNeural/HelpSource/: RTNeural.schelp  mlp_control_tutorial.scd
RTNeural_SC/RTNeural/RTNeural_python/: README.md
RTNeural_SC/RTNeural/RTNeural_python/4Osc_MLP_keras/: README.md  mlp_4osc_model.keras  train_mlp_4Osc_tf.py
RTNeural_SC/RTNeural/RTNeural_python/4Osc_MLP_torch/: README.md  torch_to_RTNeural_4Osc.py  train_4Osc_torch.py
RTNeural_SC/RTNeural/RTNeural_python/Automated-GuitarAmpModelling/: AGAM_GRU_to_RTNeural.py  GRU32_RTNeural.json  LSTM32_saw.json  Muff_GRU_RTNeural.json  README.md  moog_sine_RTNeural.json
RTNeural_SC/RTNeural/RTNeural_python/Automated-GuitarAmpModelling/GRU_Saw/: GRU16b.json  GRU16c.json  GRU_dixie.json  GRU_dixie2_RTNeural.json  GRU_dixie_RTNeural.json
RTNeural_SC/RTNeural/RTNeural_python/Automated-GuitarAmpModelling/GRU_tri/: GRU_dixie_tri.json  GRU_dixie_tri_RTNeural.json
RTNeural_SC/RTNeural/RTNeural_python/Automated-GuitarAmpModelling/LSTM_Saw/: LSTM10.json  LSTM10.jsonLSTM10_RTNeural.json  LSTM16.json  LSTM16_RTNeural.json  LSTM4.json  LSTM40.json  LSTM4_RTNeural.json  LSTM6.json  LSTM60.json  accuracy.rtf
RTNeural_SC/RTNeural/RTNeural_python/MLP_control/: README.md  mlp_RTNeural.json  mlp_training  mlp_training.pt  mlp_training.py  torch_to_RTNeural_MLP.py
RTNeural_SC/RTNeural/RTNeural_python/MLP_control/old_python/: torch_to_RTNeural_MLP.py
RTNeural_SC/RTNeural/RTNeural_python/chowdhury_models/: README.md
RTNeural_SC/RTNeural/RTNeural_python/chowdhury_models/STN_Models/: hyst_width_50.json
RTNeural_SC/RTNeural/RTNeural_python/micro_tcn/: microtcn.py
RTNeural_SC/RTNeural_SC/: RTNeural.sc  RTNeuralUGen.scx  RTNeural_SC.scx
RTNeural_SC/RTNeural_SC/Classes/: RTNeural.sc
RTNeural_SC/RTNeural_SC/HelpSource/: RTNeural.schelp
RTNeural_SC/RTNeural_SC/HelpSource/adding_mlp_sc/: adding_mlp.json  adding_mlp.pt  adding_mlp.scd  adding_mlp_RTNeural.json
RTNeural_SC/RTNeural_SC/HelpSource/lstm_predict_tutorial/: notes  notes.json  notes.keras  notes_RTNeural.json  rtneural_lstm_predict.scd
RTNeural_SC/RTNeural_SC/HelpSource/mlp_adding_tutorial/: mlp_adding.json  mlp_adding.pt  mlp_adding_RTNeural.json  mlp_adding_tutorial.scd
RTNeural_SC/RTNeural_SC/HelpSource/mlp_control_tutorial/: dummy_values.json  dummy_values.pt  dummy_values_RTNeural.json  mlp_control_tutorial.scd  synth.json  synth.pt  synth_RTNeural.json
rtneural_max/: CMakeLists.txt  max-posttarget.cmake  max-pretarget.cmake
rtneural_max/examples/: get_lstm_vectors.js  rtneural.maxhelp  rtneural_lstm_pred.maxpat  rtneural_mlp.maxpat  rtneural_mlp_control.maxpat  rtneural~.maxhelp  rtneural~_lstm.maxpat  rtneural~_lstm_2inputs.maxpat  rtneural~_mlp_trigger_mode.maxpat  rtneural~_mlp_wavetable.maxpat
rtneural_max/examples/lstm_note_prediciton/: div_by_maxval.js  get_note_durs.js  rtneural_lstm_pred.maxpat  rtneural_lstm_pred2.maxpat  test_lstm_max_vs_msp.maxpat  top_n_weighted.js
rtneural_max/examples/mlp/: rtneural_mlp_adder.maxpat  rtneural_mlp_control.maxpat  rtneural~_mlp_trigger_mode.maxpat  rtneural~_mlp_wavetable.maxpat
rtneural_max/examples/mlp_models/: JoyoExtremeMetal_RTNeural.json  mlp_synth.json  mlp_synth.pt  mlp_synth_RTNeural.json
rtneural_max/examples/rnn_distortion/: rtneural~_gru_saw.maxpat  rtneural~_lstm_distortion.maxpat  rtneural~_lstm_two_inputs.maxpat
rtneural_max/examples/saved_models/: euro.json  euro.pt  euro_RTNeural.json  mlp_adder.onnx  mlp_adder_RTNeural.json  mlp_synth_RTNeural.json
rtneural_max/examples/saved_models/lstm_note_prediction/: bach.json  bach.keras  bach_RTNeural.json  bach_dur.keras  bach_dur_RTNeural.json  bach_durs.json  bach_durs.keras  bach_durs_RTNeural.json  bach_notes.json  bach_notes.keras  bach_notes_RTNeural.json
rtneural_max/examples/saved_models/mlp/: mlp_adder.json  mlp_adder.pt  mlp_synth.json  mlp_synth.pt
rtneural_max/rtneural_max/: RTNeural_python
rtneural_max/rtneural_max/examples/: rtneural_mlp.maxpat
rtneural_max/rtneural_max/rtneural.mxo/Contents/: Info.plist
rtneural_max/rtneural_max/rtneural~.mxo/Contents/: Info.plist
rtneural_max/source/rtneural/: CMakeLists.txt  OLD_CMakeLists.txt  rtneural.cpp
rtneural_max/source/rtneural~/: CMakeLists.txt  OLD_CMakeLists.txt  rtneural~.cpp
rtneural_pd/: CMakeLists.txt  pd.cmake  rtneural.cpp  rtneural~.cpp  softmax.cpp
rtneural_pd/RTNeuralCPP/: Makefile  cmake_install.cmake
rtneural_pd/RTNeuralCPP/RTNeural/: Makefile  cmake_install.cmake
rtneural_pd/bin55-2/: pd.com  pd.def  pd.lib
rtneural_pd/examples/: rtneural-help.pd  rtneural~-help.pd  rtneural~_mlp_trigger_mode.pd  rtneural~_multi_input_lstm.pd  rtneural~_multi_input_lstm2.pd
rtneural_pd/examples/models/: DOD_AmericanMetal_GainKnob_RTNeural.json  GRU16c_RTNeural.json  TS9_HighDrive_RTNeural.json
rtneural_pd/examples/output/: mlp_training_RTNeural.json  rtneural_json.json  rtneural_mlp_control.json
rtneural_pd/libsamplerate/: Makefile  cmake_install.cmake  config.h
rtneural_pd/libsamplerate/src/: Makefile  cmake_install.cmake
rtneural_pd/rtneural_examples/: rtneural-help-notep-queue.pd  rtneural-help.pd  rtneural_json.pd  rtneural_mlp_control.pd  rtneural~-help.pd  rtneural~_mlp_trigger_mode.pd  rtneural~_mlp_wavetable.pd  rtneural~_multi_input_lstm.pd  rtneural~_multi_input_lstm2.pd
rtneural_pd/rtneural_examples/output/: mlp_training.pt
rtneural_pd/rtneural_examples/saved_models/lstm_note_prediction/: bach.json  bach_RTNeural.json  bach_dur.json
rtneural_pd/rtneural_examples/saved_models/mlp/: mlp_training.json  mlp_training.pt  mlp_training_RTNeural.json
rtneural~_pd/: CMakeLists.txt  rtneural.cpp  rtneural~.cpp
rtneural~_pd/examples/: RTNeural_python   foo.pd_lua  rtneural_json.pd  rtneural_mlp_control.pd  rtneural_mlp_control_daw.pd  rtneural~-help.pd  rtneural~_mlp_wavetable.pd  rtneural~_multi_input_lstm.pd  rtneural~_multi_input_lstm2.pd
(+74 files in other folders)
